[gd_scene load_steps=4 format=3 uid="uid://dp8glptlcla4v"]

[ext_resource type="Script" path="res://scripts/bhv_trash.gd" id="1_4khu3"]
[ext_resource type="Texture2D" uid="uid://b8qqcgots1byy" path="res://sprites/spr_trash.png" id="1_pg6np"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_agqge"]
size = Vector2(130, 90)

[node name="ObjTrashCan" type="Node2D" groups=["trash"]]
script = ExtResource("1_4khu3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_pg6np")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_agqge")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
